--- a/src/static/css/notauth.css
+++ b/src/static/css/notauth.css
@@ -1,15 +1,20 @@
-.auth{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+.auth {
+    width: 100vw;
+    height: 100vh;
     background-color: gray;
     color: white;
+    overflow: hidden;
 }
 
-@media screen and (min-width: 600px){
-    .auth{
-        margin-left: 160px !important;
-    }
+.center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+* {
+    overflow: hidden;
 }
