--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -1,23 +1,20 @@
-*::-webkit-scrollbar {
-    display: none;/* Chrome Opera Safari */
+/* Chrome Opera Safari */
+/* *::-webkit-scrollbar {
+    display: none;
   }
   
 *{
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-}
-
-.activeGroup{
-    /* border: 1px dotted blue; */
-    background-color: slateblue;
-}
+    -ms-overflow-style: none;  
+    scrollbar-width: none;  
+} */
 
 
 .content{
-    margin-top:60px;
-    overflow-y: hidden;
+    margin-top:90px;
+    overflow-y: scroll;
     padding-bottom: 60px;
     width: 100%;
+    height: 82vh;
 }
 
 
@@ -27,7 +24,7 @@
 
 .message-box{
     position: fixed;
-    background-color: slategray;
+    /* background-color: slategray; */
     display: flex;
     left: 0;
     right: 0;
@@ -41,6 +38,7 @@
     border-radius: 10px;
     overflow-x: hidden;
     display: flex;
+    border: 1px solid black;
     /* background-color: blue; */
 }
 
@@ -55,6 +53,7 @@
     padding: 0;
     width:100%;
     height: 60px;
+    border: none;
 }
 
 @media screen and (min-width: 600px){
