--- a/src/static/css/nav.css
+++ b/src/static/css/nav.css
@@ -4,9 +4,15 @@ nav{
 }
 
 
+
+
 @media screen and (min-width: 600px) {
     nav{
         height: 40px;
         margin-left: 160px;
+    }
+
+    .nav-accordion{
+        display: none;
     }
 }
