changed some cosmetic stuff, can't get the modal to close on submit, jquery error. Need to add a leave group feature and ffinish the add group functionality

--- a/src/static/css/message.css
+++ b/src/static/css/message.css
@@ -10,6 +10,7 @@
 }
 
 .chat-message-left{
+    flex-direction: row;
     margin-right: auto;
 }
 
@@ -20,6 +21,7 @@
 .sortaRounded{
     border-radius: 10px !important;
 }
+
 
 .time{
     margin-left:10px !important;
