--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -9,13 +9,37 @@
 } */
 
 
+::-webkit-scrollbar {
+    width: 18px;
+}
+
+.l {
+    margin: 0 !important;
+    padding: 0%;
+}
+
+
+::-webkit-scrollbar-thumb {
+    border: 4px solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+    border-radius: 9999px;
+    background-color: #00203fff;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #adefd1ff;
+}
+
 .content{
-    margin-top:90px;
+    margin-top: 40px;
     overflow-y: scroll;
     padding-bottom: 60px;
     width: 100%;
-    height: 82vh;
+    height: 85vh;
+    /* background-image: url(../images/galaxy.jpg); */
+    background-size: cover;
 }
+
 
 
 .hidden{
