--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,7 +1,14 @@
   /* Style page content */
-  main {
-    margin-left: 160px; /* Same as the width of the sidebar */
+  body {
+    /* margin-left: 160px; Same as the width of the sidebar */
     padding: 0px 10px;
+  }
+
+
+  @media screen and (min-width: 600px) {
+    body{
+      margin-left: 160px;
+    }
   }
 
  
