--- a/src/static/css/sidenav.css
+++ b/src/static/css/sidenav.css
@@ -2,24 +2,19 @@
 
  .sidenav {
    height: 100%;
-   /* Full-height: remove this if you want "auto" height */
    width: 160px;
-   /* Set the width of the sidebar */
    position: fixed;
-   /* Fixed Sidebar (stay in place on scroll) */
    z-index: 1;
-   /* Stay on top */
    top: 0;
-   /* Stay at the top */
    left: 0;
-   background-color: rgb(151, 24, 56);
+   background-color: #00203fff;
    overflow-x: hidden;
-   /* Disable horizontal scroll */
    padding-top: 20px;
  }
 
  .activeGroup {
-   background-color: rgb(104, 17, 38) !important;
+   background-color: #adefd1ff !important;
+   color: #00203fff !important;
  }
 
  /* The navigation menu links */
