--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -1,12 +1,4 @@
 /* Chrome Opera Safari */
-/* *::-webkit-scrollbar {
-    display: none;
-  }
-  
-*{
-    -ms-overflow-style: none;  
-    scrollbar-width: none;  
-} */
 
 
 ::-webkit-scrollbar {
@@ -78,6 +70,18 @@
     width:100%;
     height: 60px;
     border: none;
+}
+
+@media screen and ( max-width: 600px){
+    *::-webkit-scrollbar {
+        display: none;
+      }
+      
+    *{
+        -ms-overflow-style: none;  
+        scrollbar-width: none;  
+    } 
+    
 }
 
 @media screen and (min-width: 600px){
