--- a/src/static/css/nav.css
+++ b/src/static/css/nav.css
@@ -7,6 +7,13 @@ nav{
     color: white;
 }
 
+.groupName{
+    color: white !important;
+    margin: 0px auto;
+    font-size: 1.5rem;
+    margin-left: 20px;
+}
+
 
 
 
