--- a/src/static/css/sidenav.css
+++ b/src/static/css/sidenav.css
@@ -29,9 +29,9 @@
 
  /* When you mouse over the navigation links, change their color */
 
- .sidenav a:hover {
-   color: #f1f1f1;
- }
+ /* .sidenav a:hover {
+   color: #c0b5b5;
+ } */
 
 
 
