--- a/src/static/css/sidenav.css
+++ b/src/static/css/sidenav.css
@@ -11,11 +11,12 @@
    overflow-x: hidden;
    padding-top: 20px;
  }
-
+ 
  .activeGroup {
-   background-color: #adefd1ff !important;
    color: #00203fff !important;
+   background-color: #adefd1ff !important;
  }
+
 
  /* The navigation menu links */
 
@@ -23,8 +24,12 @@
    padding: 6px 8px 6px 16px;
    text-decoration: none;
    font-size: 15px;
-   color: #818181;
+   color: white;
    display: block;
+ }
+
+ .sidenav button:hover{
+   color: white;
  }
 
  /* When you mouse over the navigation links, change their color */
@@ -32,8 +37,6 @@
  /* .sidenav a:hover {
    color: #c0b5b5;
  } */
-
-
 
  /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
 
